David 2 Probo medical/force-app/main/default/objects/RMA__c/RMA__c.object-meta.xml
<CustomObject>
    <label>RMA</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>