David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Account_Name_for_customer_portal__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_customer_portal__c</fullName>
    <label>Account Name (for customer portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>