David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Notes__c</fullName>
    <label>Accounting Notes</label>
    <type>TextArea</type>
</CustomField>