David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Added_to_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Work_Order__c</fullName>
    <formula>ProductItem__r.Added_to_Work_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added to Work Order</label>
    <type>Checkbox</type>
</CustomField>