David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Airscan__c.field-meta.xml
<CustomField>
    <fullName>Airscan__c</fullName>
    <label>Airscan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>