David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Allow_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>