David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Approved_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Approved_Repairs__c</fullName>
    <label>Approved Repairs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Probe_Repair_Activities</valueSetName>
    </valueSet>
</CustomField>