David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Approving_repair_that_cannot_be_done__c.field-meta.xml
<CustomField>
    <fullName>Approving_repair_that_cannot_be_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approving repair that cannot be done</label>
    <type>Checkbox</type>
</CustomField>