David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Articulation__c.field-meta.xml
<CustomField>
    <fullName>Articulation__c</fullName>
    <label>Articulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>