David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Asset_Never_Sent_In__c.field-meta.xml
<CustomField>
    <fullName>Asset_Never_Sent_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Never Sent In</label>
    <type>Checkbox</type>
</CustomField>