David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Asset_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Opportunity_Type__c</fullName>
    <formula>ProductItem__r.Opportunity_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Opportunity Type</label>
    <type>Text</type>
</CustomField>