David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Asset_Returned_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Asset_Returned_to_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Returned to Vendor</label>
    <referenceTo>ProductItem__c</referenceTo>
    <relationshipLabel>RMAS (Asset Returned to Vendor)</relationshipLabel>
    <relationshipName>RMAS1</relationshipName>
    <type>Lookup</type>
</CustomField>