David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Asset_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Review_Status__c</fullName>
    <formula>TEXT(ProductItem__r.Review_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Review Status</label>
    <type>Text</type>
</CustomField>