David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Asset_Shipped_Checker__c.field-meta.xml
<CustomField>
    <fullName>Asset_Shipped_Checker__c</fullName>
    <formula>ProductItem__r.Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Shipped Checker</label>
    <type>Date</type>
</CustomField>