David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Asset_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Asset_Total_Cost__c</fullName>
    <formula>ProductItem__r.Cost__c  +  RMA_Asset_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>