David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Autogenerated_Credit_Memo_Decision__c.field-meta.xml
<CustomField>
    <fullName>Autogenerated_Credit_Memo_Decision__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Warranty_Claim&apos;, IF(NOT(ISBLANK(Date_RMA_Item_Received__c)), IF((Date_RMA_Item_Received__c - Date_Opportunity_Item_Shipped__c) &lt; 15, &apos;Credit Memo should be generated at 75% sales price&apos;, IF((Date_RMA_Item_Received__c - Date_Opportunity_Item_Shipped__c) &lt; 46, &apos;Credit Memo should be generated at 65% sales price&apos;, &apos;Credit memo should not be generated due to &gt;45 days&apos;)), &apos;Waiting for RMA Item&apos;), &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autogenerated Credit Memo Decision</label>
    <type>Text</type>
</CustomField>