David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Bending_Rubber__c.field-meta.xml
<CustomField>
    <fullName>Bending_Rubber__c</fullName>
    <label>Bending Rubber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>