David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Bill_Transportation_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_Transportation_To__c</fullName>
    <formula>IF(ISPICKVAL( Shipping_Account_to_Bill__c, &quot;Customer&apos;s Fedex&quot;),&quot;THIRD_PARTY&quot;,&quot;SENDER&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Transportation To</label>
    <type>Text</type>
</CustomField>