David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Cable_Jacket__c.field-meta.xml
<CustomField>
    <fullName>Cable_Jacket__c</fullName>
    <label>Cable Jacket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>