David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <label>Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>