David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Cause_of_Damage__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Damage__c</fullName>
    <label>Cause of Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appears to have occurred during usage.</fullName>
            </value>
            <value>
                <fullName>Appears to be from wear and usage over time.</fullName>
            </value>
            <value>
                <fullName>Fluid invasion was found in scope causing corrosion and damage.</fullName>
            </value>
            <value>
                <fullName>Corrosion found due to fluid invasion.  May have occurred during leak test and/or sterilization process.</fullName>
            </value>
            <value>
                <fullName>Appears to be from user.</fullName>
            </value>
            <value>
                <fullName>May be from excessive torque to Control Knob.</fullName>
            </value>
            <value>
                <fullName>May have occurred during leak test and/or sterilization process.</fullName>
            </value>
            <value>
                <fullName>Appears to be forcep damage to Biopsy Channel.</fullName>
            </value>
            <value>
                <fullName>Insertion Tube is severely crushed. May have come in contact with heavy object or possible bite mark.</fullName>
            </value>
            <value>
                <fullName>Universal Cord is severely crushed and may have come in contact with heavy object.</fullName>
            </value>
            <value>
                <fullName>May have been struck against a hard surface causing damage.</fullName>
            </value>
            <value>
                <fullName>Although no leaks were detected, fluid invasion was found in scope causing damage.</fullName>
            </value>
            <value>
                <fullName>Appears to have been exposed to excessive heat causing damage to inner components.</fullName>
            </value>
            <value>
                <fullName>Scope is bent causing damage to Rod Lenses and inner components.</fullName>
            </value>
            <value>
                <fullName>Appears to have been struck against a hard surface (possibly dropped) causing damage.</fullName>
            </value>
            <value>
                <fullName>Distal Tip is damaged. Appears to have occurred during usage.</fullName>
            </value>
            <value>
                <fullName>Tubing is severely bent, causing damage to Image Guide and Objective Lens.</fullName>
            </value>
            <value>
                <fullName>Tubing is buckled at neck of scope causing damage.</fullName>
            </value>
            <value>
                <fullName>Inner channel is damaged causing fluid invasion</fullName>
            </value>
            <value>
                <fullName>Image is misaligned and appears to have been struck against a hard surface, possibly dropped, causing damage.</fullName>
            </value>
            <value>
                <fullName>Threads are damaged and may have occurred due to wear and usage over time.</fullName>
            </value>
            <value>
                <fullName>Threads are damaged and appears to be from user.</fullName>
            </value>
            <value>
                <fullName>May have occurred during sterilization process.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>