David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Check_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Type__c</fullName>
    <formula>TEXT(ProductItem__r.Check_In_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In Type</label>
    <type>Text</type>
</CustomField>