David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity was Lost</fullName>
            </value>
            <value>
                <fullName>Customer Paid for Damage or Outright Ex.</fullName>
            </value>
            <value>
                <fullName>Probe Never Sent In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>