David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Color_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Color_Artifacts__c</fullName>
    <label>Color Artifacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>