David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Company_Image__c.field-meta.xml
<CustomField>
    <fullName>Company_Image__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Logo_Override__c))), IF(TEXT(Logo_Override__c) = &quot;MedCorp&quot;, &quot;https://probomedical--c.na131.content.force.com/servlet/servlet.FileDownload?file=0154O0000072Aav&quot;, IF(TEXT(Logo_Override__c) = &quot;Trisonics&quot;, &quot;https://probomedical--c.na131.content.force.com/servlet/servlet.FileDownload?file=0154O0000072Aax&quot;, &quot;https://probomedical--c.na131.content.force.com/servlet/servlet.FileDownload?file=0154O0000072Aaw&quot;)), IF( Shipping_FROM_Location__c = &quot;Harrisburg, PA&quot;, &quot;https://probomedical--c.na131.content.force.com/servlet/servlet.FileDownload?file=0154O0000072Aax&quot;, IF(Shipping_FROM_Location__c = &quot;Tampa, FL&quot;, &quot;https://probomedical--c.na131.content.force.com/servlet/servlet.FileDownload?file=0154O0000072Aav&quot;, &quot;https://probomedical--c.na131.content.force.com/servlet/servlet.FileDownload?file=0154O0000072Aaw&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Image</label>
    <type>Text</type>
</CustomField>