David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Connector__c.field-meta.xml
<CustomField>
    <fullName>Connector__c</fullName>
    <label>Connector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>