David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Control_Housing__c.field-meta.xml
<CustomField>
    <fullName>Control_Housing__c</fullName>
    <label>Control Housing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>