David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Core_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Core_Charge_Amount__c</fullName>
    <inlineHelpText>Enter the amount the customer will be charged if they do not return the core.</inlineHelpText>
    <label>Core Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>