David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Core_Discount__c.field-meta.xml
<CustomField>
    <fullName>Core_Discount__c</fullName>
    <formula>ProductItem__r.Product_Name__r.Std_Cost_Out__c -  ProductItem__r.Product_Name__r.Std_Cost_ex__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>