David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Core_Exchange_RMA__c.field-meta.xml
<CustomField>
    <fullName>Core_Exchange_RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Exchange RMA</label>
    <referenceTo>RMA__c</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>