David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Count_Credit_Memos__c.field-meta.xml
<CustomField>
    <fullName>Count_Credit_Memos__c</fullName>
    <label>Count Credit Memos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>