David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Create_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Create_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Shipment</label>
    <type>Checkbox</type>
</CustomField>