David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <formula>Opportunity__r.Credit_Memo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Memo #</label>
    <type>Text</type>
</CustomField>