David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Credit_Memo_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>Credit_Memo__c</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>