David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Current_Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Estimated_Ship_Date__c</fullName>
    <label>Updated Ship Date</label>
    <type>Date</type>
</CustomField>