David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <description>From portal</description>
    <label>Customer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>