David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Declined_all_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Declined_all_Repairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Declined all Repairs</label>
    <type>Checkbox</type>
</CustomField>