David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <inlineHelpText>When the core exchange is automatically generated, this field will pull the email from the decision maker on the opportunity.</inlineHelpText>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>