David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation__c</fullName>
    <label>Customer Expectation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer wants Equipment Back</fullName>
            </value>
            <value>
                <fullName>Customer Does Not want Equipment Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>