David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Fedex_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fedex_Account_Number__c</fullName>
    <formula>Opportunity__r.Account.Customer_Fedex_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Fedex Account Number</label>
    <type>Text</type>
</CustomField>