David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_indicated_issue_with_loaner__c.field-meta.xml
<CustomField>
    <fullName>Customer_indicated_issue_with_loaner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates customer has reported an issue with the loaner.</description>
    <label>Customer indicated issue with loaner</label>
    <type>Checkbox</type>
</CustomField>