David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Paid__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paid__c</fullName>
    <label>Customer Paid For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Outright exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>