David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Paid_for_Damage_or_Outright_ex__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paid_for_Damage_or_Outright_ex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Paid for Damage or Outright Ex.</label>
    <type>Checkbox</type>
</CustomField>