David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <formula>Opportunity__r.Customer_PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PO #</label>
    <type>Text</type>
</CustomField>