David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Probe_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Probe_Type__c</fullName>
    <label>Customer Probe Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ultrasound Probe</fullName>
            </value>
            <value>
                <fullName>Convex</fullName>
            </value>
            <value>
                <fullName>Convex 3D</fullName>
            </value>
            <value>
                <fullName>Linear</fullName>
            </value>
            <value>
                <fullName>Phased Array</fullName>
            </value>
            <value>
                <fullName>Endocavitary</fullName>
            </value>
            <value>
                <fullName>Endoscopy - Flexible</fullName>
            </value>
            <value>
                <fullName>Endoscopy - Rigid</fullName>
            </value>
            <value>
                <fullName>TEE Probe</fullName>
                <isActive>false</isActive>
                <label>TEE Probe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>