David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Return_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_Return_City__c</fullName>
    <label>Customer Return City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>