David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Return_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Return_Country__c</fullName>
    <label>Customer Return Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>