David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Return_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Return_Postal_Code__c</fullName>
    <label>Customer Return Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>