David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_Return_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Return_State__c</fullName>
    <label>Customer Return State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>