David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Customer_s_Probe__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Probe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a probe that is sent in for our customer&apos;s customer.</inlineHelpText>
    <label>Customer&apos;s Probe</label>
    <type>Checkbox</type>
</CustomField>