David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/CW_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>CW_Artifacts__c</fullName>
    <label>CW Artifacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>