David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/CW_Pulse__c.field-meta.xml
<CustomField>
    <fullName>CW_Pulse__c</fullName>
    <label>CW Pulse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>