David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Approved to Ship</label>
    <type>Date</type>
</CustomField>