David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Last_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Test_Completed__c</fullName>
    <label>Date Last Test Completed</label>
    <type>DateTime</type>
</CustomField>