David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Loaner_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Loaner_Shipped__c</fullName>
    <label>Date Loaner Shipped</label>
    <type>Date</type>
</CustomField>