David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Opportunity_Item_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Item_Shipped__c</fullName>
    <formula>Opportunity__r.Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Opportunity Item Shipped</label>
    <type>Date</type>
</CustomField>