David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Rental_Asset_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Rental_Asset_Shipped__c</fullName>
    <label>Date Rental Asset Shipped</label>
    <type>Date</type>
</CustomField>