David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Repair_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Repair_Approved__c</fullName>
    <label>Date Repair Approved</label>
    <type>Date</type>
</CustomField>