David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Repair_Evaluation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Repair_Evaluation_Sent__c</fullName>
    <label>Date Repair Evaluation Sent</label>
    <type>Date</type>
</CustomField>