David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Repaired_Probe_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Repaired_Probe_Shipped__c</fullName>
    <label>Date Repaired Probe Shipped</label>
    <type>Date</type>
</CustomField>