David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_RMA_Item_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_RMA_Item_Received__c</fullName>
    <label>Date RMA Item Received</label>
    <type>Date</type>
</CustomField>