David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_RMA_Record_Type_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_RMA_Record_Type_Changed__c</fullName>
    <label>Date RMA Record Type Changed</label>
    <type>DateTime</type>
</CustomField>