David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_RMA_Sent_to_FSE__c.field-meta.xml
<CustomField>
    <fullName>Date_RMA_Sent_to_FSE__c</fullName>
    <label>Date RMA Sent to FSE</label>
    <type>Date</type>
</CustomField>