David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Date_Work_Order_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_Work_Order_Shipped__c</fullName>
    <label>Date Work Order Shipped</label>
    <type>Date</type>
</CustomField>