David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_Between_Ship_and_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Ship_and_Warranty__c</fullName>
    <formula>DATEVALUE(CreatedDate) - Opportunity__r.Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Ship and Warranty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>