David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_since_evaluation_sent__c.field-meta.xml
<CustomField>
    <fullName>Days_since_evaluation_sent__c</fullName>
    <formula>IF( ISBLANK(Date_Repair_Approved__c), TODAY() - Date_Repair_Evaluation_Sent__c , Date_Repair_Approved__c - Date_Repair_Evaluation_Sent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since evaluation sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>