David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_since_loaner_shipped__c.field-meta.xml
<CustomField>
    <fullName>Days_since_loaner_shipped__c</fullName>
    <formula>IF(ISBLANK(Date_RMA_Item_Received__c), TODAY(), Date_RMA_Item_Received__c) - Date_Loaner_Shipped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since loaner shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>