David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_since_opportunity_item_shipped__c.field-meta.xml
<CustomField>
    <fullName>Days_since_opportunity_item_shipped__c</fullName>
    <formula>TODAY() - Date_Opportunity_Item_Shipped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since opportunity item shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>