David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_since_repaired_probe_shipped__c.field-meta.xml
<CustomField>
    <fullName>Days_since_repaired_probe_shipped__c</fullName>
    <formula>IF( ISBLANK(Date_RMA_Item_Received__c), TODAY() - Date_Repaired_Probe_Shipped__c , Date_RMA_Item_Received__c - Date_Repaired_Probe_Shipped__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since repaired probe shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>