David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_since_RMA_created__c.field-meta.xml
<CustomField>
    <fullName>Days_since_RMA_created__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since RMA created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>