David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Days_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Receive__c</fullName>
    <formula>Date_RMA_Item_Received__c  -  Date_Opportunity_Item_Shipped__c</formula>
    <label>Days to Receive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>