David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Declined_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Declined_Repairs__c</fullName>
    <label>Declined Repairs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>