David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Depot_Repair__c.field-meta.xml
<CustomField>
    <fullName>Depot_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depot Repair</label>
    <type>Checkbox</type>
</CustomField>