David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Depot_Repair_Reported_Issue__c.field-meta.xml
<CustomField>
    <fullName>Depot_Repair_Reported_Issue__c</fullName>
    <label>Depot Repair Reported Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>