David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Diagnostics_Test__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Test__c</fullName>
    <label>Diagnostics Test</label>
    <type>TextArea</type>
</CustomField>