David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Diagnostics_Test_Notes__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Test_Notes__c</fullName>
    <label>Diagnostics Test Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>