David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Endoscope_Evaluation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Endoscope_Evaluation_Notes__c</fullName>
    <label>Endoscope Evaluation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>