David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Endoscopy_Evaluation_Results__c.field-meta.xml
<CustomField>
    <fullName>Endoscopy_Evaluation_Results__c</fullName>
    <label>Endoscopy - Evaluation Results</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>