David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Engineer_Core_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Core_Serial_Number__c</fullName>
    <description>The serial number of the core that the engineer is sending back for core exchange</description>
    <inlineHelpText>The serial number of the core that the engineer is sending back for core exchange</inlineHelpText>
    <label>Engineer Core Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>